PORT 환경변수를 Railway에서 제공받도록 수정

--- a/railway.toml
+++ b/railway.toml
@@ -3,7 +3,7 @@ builder = "dockerfile"
 dockerfilePath = "Dockerfile"
 
 [deploy]
-startCommand = "bundle exec rails db:prepare && bundle exec puma -C config/puma.rb -b tcp://0.0.0.0:${PORT:-3000}"
+startCommand = "bundle exec rails db:prepare && bundle exec puma -C config/puma.rb"
 healthcheckPath = "/health"
 healthcheckTimeout = 120
 restartPolicyType = "on_failure"
